--- a/spec/fixtures/vcr_cassettes/Dashboord_Index/happy_path/should_have_the_users_feed.yml
+++ b/spec/fixtures/vcr_cassettes/Dashboord_Index/happy_path/should_have_the_users_feed.yml
@@ -25,16 +25,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 58ba46fd-1a6c-41ec-a052-a79bec509291
+      - d458a0c7-5a48-4a7a-83a6-edb0a704c761
       X-Runtime:
-      - '0.229446'
+      - '0.007296'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"7","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"8","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"9","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
         by jim"}},{"id":"10","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
+  recorded_at: Tue, 20 Apr 2021 02:43:53 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/circle/posts
@@ -60,9 +60,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - eca79b38-f479-4719-9219-917f1ff1e6a8
+      - 6501b687-72a1-4ed2-b908-185cc576764d
       X-Runtime:
-      - '0.039256'
+      - '0.012703'
       Transfer-Encoding:
       - chunked
     body:
@@ -75,41 +75,7 @@ http_interactions:
         did you see that we''re not friends on FB anymore?","link":"photoURL.com","user_id":4,"created_at":"2021-04-18T16:28:20.872Z"}},{"id":"19","type":"post","attributes":{"content":"hey
         did you see hear about that create app called ''level''?","link":"photoURL.com","user_id":4,"created_at":"2021-04-18T16:28:20.873Z"}},{"id":"20","type":"post","attributes":{"content":"hey
         i just got hired at a sick new comapny","link":null,"user_id":5,"created_at":"2021-04-18T16:28:20.875Z"}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
-- request:
-    method: get
-    uri: http://localhost:3001/api/v1/profile/1/tags
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.4.1
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"431f28e382cb4969305146b6f1f3d405"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 2cd86117-a887-47b1-b7a0-50bf32b7535f
-      X-Runtime:
-      - '0.037704'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":[{"id":"6","type":"tag","attributes":{"name":"Painter"}},{"id":"8","type":"tag","attributes":{"name":"Sculpter"}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
+  recorded_at: Tue, 20 Apr 2021 02:43:53 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/post
@@ -131,13 +97,13 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"13977c8a9377c93ca19bf8ac8b1d93b2"
+      - W/"1886bea28262945e06c7b8a92e58887f"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 402f7ea8-b8fd-41a1-8495-4102925420b7
+      - 6e72c708-1c91-4538-80bd-daa08f48e7dd
       X-Runtime:
-      - '0.008335'
+      - '0.005010'
       Transfer-Encoding:
       - chunked
     body:
@@ -145,80 +111,10 @@ http_interactions:
       string: '{"data":[{"id":"11","type":"post","attributes":{"content":"hey did
         you see that lil nas X video?","link":"photoURL.com","user_id":1,"created_at":"2021-04-18T16:28:20.859Z"}},{"id":"12","type":"post","attributes":{"content":"hey
         did you see that create meme?","link":"photoURL.com","user_id":1,"created_at":"2021-04-18T16:28:20.861Z"}},{"id":"13","type":"post","attributes":{"content":"hey
-        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-18T16:28:20.863Z"}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
-- request:
-    method: get
-    uri: http://localhost:3001/api/v1/profiles/1/galleries
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.4.1
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"e541dcb1dfea46045755e5dc23fe5db5"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - fc62386f-ac0c-4f1f-af8a-9a51e65c0b12
-      X-Runtime:
-      - '0.054603'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"gallery","attributes":{"user_id":1,"photo_url":"http://www.google.com","name":"photos
-        from cali","created_at":"2021-04-18T16:28:20.884Z","updated_at":"2021-04-18T16:28:20.884Z","photo_count":3}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
-- request:
-    method: get
-    uri: http://localhost:3001/api/v1/profiles/1/galleries/1/photos
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.4.1
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"9213c8fd2c307a52fe9509f495c8e673"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 4d0f2ae2-5ac8-44b3-b96c-a3ee985ef8dc
-      X-Runtime:
-      - '0.022537'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-18T16:28:20.916Z","updated_at":"2021-04-18T16:28:20.916Z","gallery_id":1}},{"id":"2","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-18T16:28:20.921Z","updated_at":"2021-04-18T16:28:20.921Z","gallery_id":1}},{"id":"3","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-18T16:28:20.924Z","updated_at":"2021-04-18T16:28:20.924Z","gallery_id":1}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
+        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-18T16:28:20.863Z"}},{"id":"21","type":"post","attributes":{"content":"this
+        is my first post","link":"www.google.com","user_id":1,"created_at":"2021-04-20T02:39:20.925Z"}},{"id":"22","type":"post","attributes":{"content":"this
+        is my first post","link":"www.google.com","user_id":1,"created_at":"2021-04-20T02:41:17.650Z"}}]}'
+  recorded_at: Tue, 20 Apr 2021 02:43:53 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -244,16 +140,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a1421130-da45-4d56-a534-570bcffedff8
+      - 8b9e5700-ca9a-459c-a43b-50988545c9f4
       X-Runtime:
-      - '0.003785'
+      - '0.002774'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"6","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
+  recorded_at: Tue, 20 Apr 2021 02:43:54 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -279,14 +175,14 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9917f367-ee8e-41ba-8b24-a8e27e4dd464
+      - 1765daa3-a4e6-4f5d-913b-84c83a32a837
       X-Runtime:
-      - '0.003735'
+      - '0.002959'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"6","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Mon, 19 Apr 2021 21:05:24 GMT
+  recorded_at: Tue, 20 Apr 2021 02:43:54 GMT
 recorded_with: VCR 6.0.0
